Bower 0.11-unreleased
=====================

* thread/pager: Show messages with exclude tags if the tags are explicitly
  searched for in the index view.

Bower 0.10 (2019-01-26)
=======================

* thread/pager: Add 'W' key to forward message.
* Support BOWER_CONFIG environment variable.
* Document support for XDG Base Directory Specification.
* Support tab expansion for query:.
* Support ~NAME as a shorthand for query:NAME.
* Support Shift-Tab to cycle through completions in reverse.
* Make path completion work more smoothly.
* Minor improvements.

Bower 0.9 (2018-10-07)
======================

* Support conversion of message parts to text using external filters.
* Add ',' key to go to next unread thread/message (synonym for Tab).
* thread/pager: Show pager progress as percentage of current message.
* thread/pager: Periodically poll for new messages.
* config: Replace index.poll_period_secs with ui.poll_period_secs.

Bower 0.8.1 (2018-04-01)
========================

* Save/restore curses mode for any command that might invoke pinentry-curses.
* Add makefile target to produce man page (bower.1).

Bower 0.8 (2017-07-30)
======================
This release requires notmuch 0.21 or above.

* Look up addresses using notmuch address.
* Move add to addressbook to '@' key.
* Add 'a' keys to apply '-inbox -unread' or else '+inbox'.
* Add 'A' key to leave thread view and apply '-inbox -unread' to the thread.
* Bug fixes and minor improvements.

Bower 0.7 (2016-03-28)
======================
This release requires notmuch 0.16 or above (notmuch 0.19+ is recommended)
and gpgme. Consider updating your bower.conf to make use of multiple accounts.

* Support for multiple accounts.
* PGP/MIME support.
* Use notmuch insert command instead of notmuch-deliver.
* Make use of notmuch search --exclude=all option.
* Make use of notmuch show --entire-thread=false option.
* Represent excluded messages (with replies) in thread view.